Fix z-index problem for sort dropdown

--- a/app/assets/stylesheets/components/_video.scss
+++ b/app/assets/stylesheets/components/_video.scss
@@ -77,11 +77,11 @@
   background-size: cover;
   width: 50px;
   height: 50px;
-  z-index: 10;
+  // z-index: 10;
 
   &:hover {
     opacity: 0.5;
     cursor: pointer;
-    z-index: 10;
+    // z-index: 10;
   }
 }
